--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.22.0",
+    "bitcore-explorers": "^1.0.1",
     "bitcore-lib": "^8.25.10",
     "coininfo": "^5.1.0",
     "coinkey": "^3.0.0",
